src/objects/FSC_Existing_Exposure__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Unit</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DUNS Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Highest_Credit__c</fullName>
        <label>Highest Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>National_Account_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>National Account Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Risk_Grade_Source__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Risk Grade Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Risk_Grade__c</fullName>
        <label>Primary Risk Grade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recourse_Amount__c</fullName>
        <label>Recourse Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recourse_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recourse Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBRI_Risk_Grade__c</fullName>
        <label>SBRI Risk Grade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State/Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>FSC Existing Exposure</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>FSC Existing Exposure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FSC Existing Exposure</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>